--- a/client/Makefile
+++ b/client/Makefile
@@ -8,27 +8,23 @@ RESET 	= "\033[1;0m"
 
 # VARIABLES #
 #
-NAME 		= matt_daemon
+NAME 		= matt_daemon_client
 CC 			= g++
 INCLUDE 	= -std=c++20
-CXXFLAGS 	= -Wall -Wextra -g -fsanitize=address #-werror
+CXXFLAGS 	= -Wall -Wextra -g -fsanitize=address -lX11 #-werror
 
 # PATHS #
 #
 SRC_PATH    	= srcs
-SUBFILE1_PATH   = reporter
-SUBFILE2_PATH   = daemon
+SUBFILE1_PATH   = gui
 OBJ_PATH    	= objects
 
 # SOURCES #
 #
-SUBFILE1_SRC = reporter.cpp
-SUBFILE2_SRC = daemon.cpp
+SUBFILE1_SRC = gui.cpp
 
 SRC =	main.cpp \
-		$(addprefix $(SUBFILE1_PATH)/, $(SUBFILE1_SRC)) \
-		$(addprefix $(SUBFILE2_PATH)/, $(SUBFILE2_SRC))
-
+		$(addprefix $(SUBFILE1_PATH)/, $(SUBFILE1_SRC))
 # RULES #
 #
 all: $(NAME)
@@ -39,7 +35,6 @@ OBJS 	  = $(addprefix $(OBJ_PATH)/, $(SRC:%.cpp=%.o))
 $(OBJ_PATH):
 	mkdir -p $(OBJ_PATH)
 	mkdir -p $(addprefix $(OBJ_PATH)/, $(SUBFILE1_PATH))
-	mkdir -p $(addprefix $(OBJ_PATH)/, $(SUBFILE2_PATH))
 
 $(OBJ_PATH)/%.o: $(SRC_PATH)/%.cpp | $(OBJ_PATH)
 	$(CC) $(CXXFLAGS) $(INCLUDE) -c $< -o $@
@@ -64,11 +59,6 @@ $(NAME): $(OBJS)
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⠻⢿⣿⣿⣿⣿⣿⣿⠿⠋⠉⠛⠋⠉⠉⠁⠀⠀⠀⠀\n\
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠉⠉⠁\n"
 
-client:
-	$(MAKE) -C ./client/
-
-bonus: all client
-
 clean:
 	$(PURPLE) CLEANING OBJECTS $(RESET)
 		rm -rf $(OBJ_PATH)
@@ -76,7 +66,7 @@ clean:
 fclean: clean
 	$(PURPLE) CLEANING OBJECTS AND EXEC $(RESET)
 		rm -rf $(NAME)
-	$(MAKE) fclean -C ./client/
+
 re: fclean all
 
-.PHONY: all clean fclean re client
+.PHONY: all clean fclean re
