--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,7 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "apt-get update && apt-get install -y gcc netcat-traditional procps"
+	"postCreateCommand": "apt-get update && apt-get install -y build-essential gcc netcat-traditional procps"
 
 	// Configure tool-specific properties.
 	//"customizations": {
